create css files for ultility classes

--- a/Development-Source/projects/Library-Core/src/lib/styles/design_tokens.css
+++ b/Development-Source/projects/Library-Core/src/lib/styles/design_tokens.css
@@ -275,8 +275,8 @@
 /* 2. Typography - MD (Default) */
 :root,
 [data-typography="md"] {
-  --font-family-font-family-display: Inter;
-  --font-family-font-family-body: Inter;
+  --font-family-display: Inter;
+  --font-family-body: Inter;
   --font-weight-regular: 400;
   --font-weight-regular-italic: 400;
   --font-weight-medium: 500;
@@ -319,167 +319,6 @@
   --textcase-none: none;
   --textdecoration-none: none;
   --paragraphindent-0: 0px;
-
-  /* Body-xs*/
-  --body-xs: var(--font-family-font-family-body) var(--font-weight-regular) var(--line-height-text-xs) var(--font-size-text-xs) var(--letterspacing-0) var(--paragraphspacing-1) var(--paragraphindent-0) var(--textcase-none) var(--textdecoration-none);
-  --body-xs-font-weight: var(--font-weight-regular);
-  --body-xs-line-height: var(--line-height-text-xs);
-  --body-xs-font-size: var(--font-size-text-xs);
-  --body-xs-letter-spacing: var(--letterspacing-0);
-  --body-xs-paragraph-spacing: var(--paragraphspacing-1);
-  --body-xs-paragraph-indent: var(--paragraphindent-0);
-  --body-xs-text-case: var(--textcase-none);
-  --body-xs-text-decoration: var(--textdecoration-none);
-  /* Body-sm*/
-  --body-sm-font-family: var(--font-family-font-family-body);
-  --body-sm-font-weight: var(--font-weight-regular);
-  --body-sm-line-height: var(--line-height-text-sm);
-  --body-sm-font-size: var(--font-size-text-sm);
-  --body-sm-letter-spacing: var(--letterspacing-0);
-  --body-sm-paragraph-spacing: var(--paragraphspacing-2);
-  --body-sm-paragraph-indent: var(--paragraphindent-0);
-  --body-sm-text-case: var(--textcase-none);
-  --body-sm-text-decoration: var(--textdecoration-none);
-  /* Body-md*/
-  --body-md-font-family: var(--font-family-font-family-body);
-  --body-md-font-weight: var(--font-weight-regular);
-  --body-md-line-height: var(--line-height-text-md);
-  --body-md-font-size: var(--font-size-text-md-base);
-  --body-md-letter-spacing: var(--letterspacing-0);
-  --body-md-paragraph-spacing: var(--paragraphspacing-3);
-  --body-md-paragraph-indent: var(--paragraphindent-0);
-  --body-md-text-case: var(--textcase-none);
-  --body-md-text-decoration: var(--textdecoration-none);
-  /* Body-lg*/
-  --body-lg-font-family: var(--font-family-font-family-body);
-  --body-lg-font-weight: var(--font-weight-regular);
-  --body-lg-line-height: var(--line-height-text-lg);
-  --body-lg-font-size: var(--font-size-text-lg);
-  --body-lg-letter-spacing: var(--letterspacing-0);
-  --body-lg-paragraph-spacing: var(--paragraphspacing-4);
-  --body-lg-paragraph-indent: var(--paragraphindent-0);
-  --body-lg-text-case: var(--textcase-none);
-  --body-lg-text-decoration: var(--textdecoration-none);
-  /* Body-xl*/
-  --body-xl-font-family: var(--font-family-font-family-body);
-  --body-xl-font-weight: var(--font-weight-regular);
-  --body-xl-line-height: var(--line-height-text-xl);
-  --body-xl-font-size: var(--font-size-text-xl);
-  --body-xl-letter-spacing: var(--letterspacing-0);
-  --body-xl-paragraph-spacing: var(--paragraphspacing-5);
-  --body-xl-paragraph-indent: var(--paragraphindent-0);
-  --body-xl-text-case: var(--textcase-none);
-  --body-xl-text-decoration: var(--textdecoration-none);
-  /* Label-xs*/
-  --label-xs-font-family: var(--font-family-font-family-body);
-  --label-xs-font-weight: var(--font-weight-medium);
-  --label-xs-line-height: var(--line-height-text-xs);
-  --label-xs-letter-spacing: var(--letterspacing-0);
-  --label-xs-paragraph-spacing: var(--paragraphspacing-0);
-  --label-xs-paragraph-indent: var(--paragraphindent-0);
-  --label-xs-text-case: var(--textcase-none);
-  --label-xs-text-decoration: var(--textdecoration-none);
-  --label-xs-font-size: var(--font-size-text-xs);
-  /* Label-sm*/
-  --label-sm-font-family: var(--font-family-font-family-body);
-  --label-sm-font-weight: var(--font-weight-medium);
-  --label-sm-line-height: var(--line-height-text-sm);
-  --label-sm-letter-spacing: var(--letterspacing-0);
-  --label-sm-paragraph-spacing: var(--paragraphspacing-2);
-  --label-sm-paragraph-indent: var(--paragraphindent-0);
-  --label-sm-text-case: var(--textcase-none);
-  --label-sm-text-decoration: var(--textdecoration-none);
-  --label-sm-font-size: var(--font-size-text-sm);
-  /* Label-md*/
-  --label-md-font-family: var(--font-family-font-family-body);
-  --label-md-font-weight: var(--font-weight-medium);
-  --label-md-line-height: var(--line-height-text-md);
-  --label-md-font-size: var(--font-size-text-md-base);
-  --label-md-letter-spacing: var(--letterspacing-0);
-  --label-md-paragraph-spacing: var(--paragraphspacing-3);
-  --label-md-paragraph-indent: var(--paragraphindent-0);
-  --label-md-text-case: var(--textcase-none);
-  --label-md-text-decoration: var(--textdecoration-none);
-  /* Label-lg*/
-  --label-lg-font-family: var(--font-family-font-family-body);
-  --label-lg-font-weight: var(--font-weight-medium);
-  --label-lg-line-height: var(--line-height-text-lg);
-  --label-lg-font-size: var(--font-size-text-lg);
-  --label-lg-letter-spacing: var(--letterspacing-0);
-  --label-lg-paragraph-spacing: var(--paragraphspacing-4);
-  --label-lg-paragraph-indent: var(--paragraphindent-0);
-  --label-lg-text-case: var(--textcase-none);
-  --label-lg-text-decoration: var(--textdecoration-none);
-  /* Label-xl*/
-  --label-xl-font-family: var(--font-family-font-family-body);
-  --label-xl-font-weight: var(--font-weight-medium);
-  --label-xl-line-height: var(--line-height-text-xl);
-  --label-xl-font-size: var(--font-size-text-xl);
-  --label-xl-letter-spacing: var(--letterspacing-0);
-  --label-xl-paragraph-spacing: var(--paragraphspacing-5);
-  --label-xl-paragraph-indent: var(--paragraphindent-0);
-  --label-xl-text-case: var(--textcase-none);
-  --label-xl-text-decoration: var(--textdecoration-none);
-  /* Display-xs*/
-  --display-xs-font-family: var(--font-family-font-family-body);
-  --display-xs-font-weight: var(--font-weight-semibold);
-  --display-xs-line-height: var(--line-height-text-md);
-  --display-xs-font-size: var(--font-size-display-xs);
-  --display-xs-letter-spacing: var(--letterspacing-0);
-  --display-xs-paragraph-spacing: var(--paragraphspacing-0);
-  --display-xs-paragraph-indent: var(--paragraphindent-0);
-  --display-xs-text-case: var(--textcase-none);
-  --display-xs-text-decoration: var(--textdecoration-none);
-  /* Display-sm*/
-  --display-sm-font-family: var(--font-family-font-family-body);
-  --display-sm-font-weight: var(--font-weight-semibold);
-  --display-sm-line-height: var(--line-height-text-lg);
-  --display-sm-font-size: var(--font-size-display-sm);
-  --display-sm-letter-spacing: var(--letterspacing-0);
-  --display-sm-paragraph-spacing: var(--paragraphspacing-0);
-  --display-sm-paragraph-indent: var(--paragraphindent-0);
-  --display-sm-text-case: var(--textcase-none);
-  --display-sm-text-decoration: var(--textdecoration-none);
-  /* Display-md*/
-  --display-md-font-family: var(--font-family-font-family-body);
-  --display-md-font-weight: var(--font-weight-semibold);
-  --display-md-line-height: var(--line-height-text-xl);
-  --display-md-font-size: var(--font-size-display-md);
-  --display-md-letter-spacing: var(--letterspacing-1);
-  --display-md-paragraph-spacing: var(--paragraphspacing-0);
-  --display-md-paragraph-indent: var(--paragraphindent-0);
-  --display-md-text-case: var(--textcase-none);
-  --display-md-text-decoration: var(--textdecoration-none);
-  /* Display-lg*/
-  --display-lg-font-family: var(--font-family-font-family-body);
-  --display-lg-font-weight: var(--font-weight-semibold);
-  --display-lg-line-height: var(--line-height-display-lg);
-  --display-lg-font-size: var(--font-size-display-lg);
-  --display-lg-letter-spacing: var(--letterspacing-1);
-  --display-lg-paragraph-spacing: var(--paragraphspacing-0);
-  --display-lg-paragraph-indent: var(--paragraphindent-0);
-  --display-lg-text-case: var(--textcase-none);
-  --display-lg-text-decoration: var(--textdecoration-none);
-  /* Display-xl*/
-  --display-xl-font-family: var(--font-family-font-family-body);
-  --display-xl-font-weight: var(--font-weight-semibold);
-  --display-xl-line-height: var(--line-height-display-xl);
-  --display-xl-font-size: var(--font-size-display-xl);
-  --display-xl-letter-spacing: var(--letterspacing-2);
-  --display-xl-paragraph-spacing: var(--paragraphspacing-0);
-  --display-xl-paragraph-indent: var(--paragraphindent-0);
-  --display-xl-text-case: var(--textcase-none);
-  --display-xl-text-decoration: var(--textdecoration-none);
-  /* Display-2xl*/
-  --display-2xl-font-family: var(--font-family-font-family-body);
-  --display-2xl-font-weight: var(--font-weight-semibold);
-  --display-2xl-line-height: var(--line-height-display-2xl);
-  --display-2xl-font-size: var(--font-size-display-2xl);
-  --display-2xl-letter-spacing: var(--letterspacing-2);
-  --display-2xl-paragraph-spacing: var(--paragraphspacing-0);
-  --display-2xl-paragraph-indent: var(--paragraphindent-0);
-  --display-2xl-text-case: var(--textcase-none);
-  --display-2xl-text-decoration: var(--textdecoration-none);
 }
 
 /* 3. Typography - LG */
@@ -528,167 +367,6 @@
   --textcase-none: none;
   --textdecoration-none: none;
   --paragraphindent-0: 0px;
-
-  /* Body-xs*/
-  --body-xs-font-family: var(--font-family-font-family-body);
-  --body-xs-font-weight: var(--font-weight-regular);
-  --body-xs-line-height: var(--line-height-text-xs);
-  --body-xs-font-size: var(--font-size-text-xs);
-  --body-xs-letter-spacing: var(--letterspacing-0);
-  --body-xs-paragraph-spacing: var(--paragraphspacing-1);
-  --body-xs-paragraph-indent: var(--paragraphindent-0);
-  --body-xs-text-case: var(--textcase-none);
-  --body-xs-text-decoration: var(--textdecoration-none);
-  /* Body-sm*/
-  --body-sm-font-family: var(--font-family-font-family-body);
-  --body-sm-font-weight: var(--font-weight-regular);
-  --body-sm-line-height: var(--line-height-text-sm);
-  --body-sm-font-size: var(--font-size-text-sm);
-  --body-sm-letter-spacing: var(--letterspacing-0);
-  --body-sm-paragraph-spacing: var(--paragraphspacing-2);
-  --body-sm-paragraph-indent: var(--paragraphindent-0);
-  --body-sm-text-case: var(--textcase-none);
-  --body-sm-text-decoration: var(--textdecoration-none);
-  /* Body-md*/
-  --body-md-font-family: var(--font-family-font-family-body);
-  --body-md-font-weight: var(--font-weight-regular);
-  --body-md-line-height: var(--line-height-text-md);
-  --body-md-font-size: var(--font-size-text-md-base);
-  --body-md-letter-spacing: var(--letterspacing-0);
-  --body-md-paragraph-spacing: var(--paragraphspacing-3);
-  --body-md-paragraph-indent: var(--paragraphindent-0);
-  --body-md-text-case: var(--textcase-none);
-  --body-md-text-decoration: var(--textdecoration-none);
-  /* Body-lg*/
-  --body-lg-font-family: var(--font-family-font-family-body);
-  --body-lg-font-weight: var(--font-weight-regular);
-  --body-lg-line-height: var(--line-height-text-lg);
-  --body-lg-font-size: var(--font-size-text-lg);
-  --body-lg-letter-spacing: var(--letterspacing-0);
-  --body-lg-paragraph-spacing: var(--paragraphspacing-4);
-  --body-lg-paragraph-indent: var(--paragraphindent-0);
-  --body-lg-text-case: var(--textcase-none);
-  --body-lg-text-decoration: var(--textdecoration-none);
-  /* Body-xl*/
-  --body-xl-font-family: var(--font-family-font-family-body);
-  --body-xl-font-weight: var(--font-weight-regular);
-  --body-xl-line-height: var(--line-height-text-xl);
-  --body-xl-font-size: var(--font-size-text-xl);
-  --body-xl-letter-spacing: var(--letterspacing-0);
-  --body-xl-paragraph-spacing: var(--paragraphspacing-5);
-  --body-xl-paragraph-indent: var(--paragraphindent-0);
-  --body-xl-text-case: var(--textcase-none);
-  --body-xl-text-decoration: var(--textdecoration-none);
-  /* Label-xs*/
-  --label-xs-font-family: var(--font-family-font-family-body);
-  --label-xs-font-weight: var(--font-weight-medium);
-  --label-xs-line-height: var(--line-height-text-xs);
-  --label-xs-letter-spacing: var(--letterspacing-0);
-  --label-xs-paragraph-spacing: var(--paragraphspacing-0);
-  --label-xs-paragraph-indent: var(--paragraphindent-0);
-  --label-xs-text-case: var(--textcase-none);
-  --label-xs-text-decoration: var(--textdecoration-none);
-  --label-xs-font-size: var(--font-size-text-xs);
-  /* Label-sm*/
-  --label-sm-font-family: var(--font-family-font-family-body);
-  --label-sm-font-weight: var(--font-weight-medium);
-  --label-sm-line-height: var(--line-height-text-sm);
-  --label-sm-letter-spacing: var(--letterspacing-0);
-  --label-sm-paragraph-spacing: var(--paragraphspacing-2);
-  --label-sm-paragraph-indent: var(--paragraphindent-0);
-  --label-sm-text-case: var(--textcase-none);
-  --label-sm-text-decoration: var(--textdecoration-none);
-  --label-sm-font-size: var(--font-size-text-sm);
-  /* Label-md*/
-  --label-md-font-family: var(--font-family-font-family-body);
-  --label-md-font-weight: var(--font-weight-medium);
-  --label-md-line-height: var(--line-height-text-md);
-  --label-md-font-size: var(--font-size-text-md-base);
-  --label-md-letter-spacing: var(--letterspacing-0);
-  --label-md-paragraph-spacing: var(--paragraphspacing-3);
-  --label-md-paragraph-indent: var(--paragraphindent-0);
-  --label-md-text-case: var(--textcase-none);
-  --label-md-text-decoration: var(--textdecoration-none);
-  /* Label-lg*/
-  --label-lg-font-family: var(--font-family-font-family-body);
-  --label-lg-font-weight: var(--font-weight-medium);
-  --label-lg-line-height: var(--line-height-text-lg);
-  --label-lg-font-size: var(--font-size-text-lg);
-  --label-lg-letter-spacing: var(--letterspacing-0);
-  --label-lg-paragraph-spacing: var(--paragraphspacing-4);
-  --label-lg-paragraph-indent: var(--paragraphindent-0);
-  --label-lg-text-case: var(--textcase-none);
-  --label-lg-text-decoration: var(--textdecoration-none);
-  /* Label-xl*/
-  --label-xl-font-family: var(--font-family-font-family-body);
-  --label-xl-font-weight: var(--font-weight-medium);
-  --label-xl-line-height: var(--line-height-text-xl);
-  --label-xl-font-size: var(--font-size-text-xl);
-  --label-xl-letter-spacing: var(--letterspacing-0);
-  --label-xl-paragraph-spacing: var(--paragraphspacing-5);
-  --label-xl-paragraph-indent: var(--paragraphindent-0);
-  --label-xl-text-case: var(--textcase-none);
-  --label-xl-text-decoration: var(--textdecoration-none);
-  /* Display-xs*/
-  --display-xs-font-family: var(--font-family-font-family-body);
-  --display-xs-font-weight: var(--font-weight-semibold);
-  --display-xs-line-height: var(--line-height-text-md);
-  --display-xs-font-size: var(--font-size-display-xs);
-  --display-xs-letter-spacing: var(--letterspacing-0);
-  --display-xs-paragraph-spacing: var(--paragraphspacing-0);
-  --display-xs-paragraph-indent: var(--paragraphindent-0);
-  --display-xs-text-case: var(--textcase-none);
-  --display-xs-text-decoration: var(--textdecoration-none);
-  /* Display-sm*/
-  --display-sm-font-family: var(--font-family-font-family-body);
-  --display-sm-font-weight: var(--font-weight-semibold);
-  --display-sm-line-height: var(--line-height-text-lg);
-  --display-sm-font-size: var(--font-size-display-sm);
-  --display-sm-letter-spacing: var(--letterspacing-0);
-  --display-sm-paragraph-spacing: var(--paragraphspacing-0);
-  --display-sm-paragraph-indent: var(--paragraphindent-0);
-  --display-sm-text-case: var(--textcase-none);
-  --display-sm-text-decoration: var(--textdecoration-none);
-  /* Display-md*/
-  --display-md-font-family: var(--font-family-font-family-body);
-  --display-md-font-weight: var(--font-weight-semibold);
-  --display-md-line-height: var(--line-height-text-xl);
-  --display-md-font-size: var(--font-size-display-md);
-  --display-md-letter-spacing: var(--letterspacing-1);
-  --display-md-paragraph-spacing: var(--paragraphspacing-0);
-  --display-md-paragraph-indent: var(--paragraphindent-0);
-  --display-md-text-case: var(--textcase-none);
-  --display-md-text-decoration: var(--textdecoration-none);
-  /* Display-lg*/
-  --display-lg-font-family: var(--font-family-font-family-body);
-  --display-lg-font-weight: var(--font-weight-semibold);
-  --display-lg-line-height: var(--line-height-display-lg);
-  --display-lg-font-size: var(--font-size-display-lg);
-  --display-lg-letter-spacing: var(--letterspacing-1);
-  --display-lg-paragraph-spacing: var(--paragraphspacing-0);
-  --display-lg-paragraph-indent: var(--paragraphindent-0);
-  --display-lg-text-case: var(--textcase-none);
-  --display-lg-text-decoration: var(--textdecoration-none);
-  /* Display-xl*/
-  --display-xl-font-family: var(--font-family-font-family-body);
-  --display-xl-font-weight: var(--font-weight-semibold);
-  --display-xl-line-height: var(--line-height-display-xl);
-  --display-xl-font-size: var(--font-size-display-xl);
-  --display-xl-letter-spacing: var(--letterspacing-2);
-  --display-xl-paragraph-spacing: var(--paragraphspacing-0);
-  --display-xl-paragraph-indent: var(--paragraphindent-0);
-  --display-xl-text-case: var(--textcase-none);
-  --display-xl-text-decoration: var(--textdecoration-none);
-  /* Display-2xl*/
-  --display-2xl-font-family: var(--font-family-font-family-body);
-  --display-2xl-font-weight: var(--font-weight-semibold);
-  --display-2xl-line-height: var(--line-height-display-2xl);
-  --display-2xl-font-size: var(--font-size-display-2xl);
-  --display-2xl-letter-spacing: var(--letterspacing-2);
-  --display-2xl-paragraph-spacing: var(--paragraphspacing-0);
-  --display-2xl-paragraph-indent: var(--paragraphindent-0);
-  --display-2xl-text-case: var(--textcase-none);
-  --display-2xl-text-decoration: var(--textdecoration-none);
 }
 
 /* 4. Colors - Light Mode (Default) */
